<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:divideStyle="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_10"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_6"
        android:background="@color/gray_line_area" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">


        <TextView
            android:id="@+id/tvName"
            android:layout_width="@dimen/dimens_100"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:text="@string/name"
            android:textColor="@color/black_2"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/edtName"
            style="@style/common_edt_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvName"
            android:background="@android:color/transparent"
            android:gravity="center_vertical|left"
            android:hint="@string/inut_name"
            android:inputType="text" />
    </RelativeLayout>

    <!--<View style="@style/common_margin_line" />-->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="@dimen/dimens_100"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:text="@string/gender"
            android:textColor="@color/gray"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/edtGender"
            style="@style/common_edt_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvGender"
            android:background="@android:color/transparent"
            android:gravity="center_vertical|left" />
    </RelativeLayout>

    <com.dearzs.app.widget.CustomCellView
        android:id="@+id/cell_persional_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        divideStyle:cDesc=""
        divideStyle:cDescTextColor="@color/black_1"
        divideStyle:cShowArror="true"
        divideStyle:cShowIcon="false"
        divideStyle:cShowLine="true"
        divideStyle:cShowTopLine="true"
        divideStyle:cTitle="性别"
        divideStyle:cTitleTextColor="@color/black_2" />

    <!--<View style="@style/common_margin_line" />-->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="@dimen/dimens_100"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:text="@string/age"
            android:textColor="@color/gray"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/edtAge"
            style="@style/common_edt_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvAge"
            android:background="@android:color/transparent"
            android:gravity="center_vertical|left" />
    </RelativeLayout>

    <com.dearzs.app.widget.CustomCellView
        android:id="@+id/cell_persional_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        divideStyle:cDesc=""
        divideStyle:cDescTextColor="@color/black_1"
        divideStyle:cShowArror="true"
        divideStyle:cShowIcon="false"
        divideStyle:cShowLine="true"
        divideStyle:cShowTopLine="true"
        divideStyle:cTitle="年龄"
        divideStyle:cTitleTextColor="@color/black_2" />
    <!--<View style="@style/common_margin_line" />-->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="@dimen/dimens_100"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:text="@string/phone"
            android:textColor="@color/black_2"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/edtPhone"
            style="@style/common_edt_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvPhone"
            android:background="@android:color/transparent"
            android:gravity="center_vertical|left"
            android:inputType="phone"
            android:hint="@string/input_phone" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_1"
        android:background="@color/gray_line_area" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/tvCardNO"
            android:layout_width="@dimen/dimens_100"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:text="@string/cardNO"
            android:textColor="@color/black_2"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/edtCardNO"
            style="@style/common_edt_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvCardNO"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:gravity="center_vertical|left"
            android:hint="@string/input_cardNO" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_1"
        android:background="@color/gray_line_area" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="@dimen/dimens_100"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:text="@string/address"
            android:textColor="@color/black_2"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/edtAddress"
            style="@style/common_edt_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tvAddress"
            android:background="@android:color/transparent"
            android:gravity="center_vertical|left"
            android:hint="@string/input_address" />
    </RelativeLayout>

    <!--<View style="@style/common_margin_line" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimens_64"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/dimens_12"
        android:layout_marginRight="@dimen/dimens_12"
        android:clickable="true"
        android:gravity="center_vertical"
        android:text="添加成功后，患者的的账号也会生成，登陆账号是手机号，默认密码是手机号后六位"
        android:textColor="@color/gray"
        android:textSize="14dp" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_48"
        android:layout_marginLeft="@dimen/dimens_12"
        android:layout_marginRight="@dimen/dimens_12"
        android:background="@drawable/rectange_green_bg_selector"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="@dimen/dimens_16" />

</LinearLayout>
