<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_line_area"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimens_48"
        android:layout_marginTop="6dp"
        android:background="@color/white"
        android:paddingLeft="@dimen/dimens_12"
        android:paddingRight="@dimen/dimens_12" >

        <ImageView
            android:id="@+id/imvPhoneIcon"
            android:layout_width="@dimen/dimens_20"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/phone_icon" />

        <EditText
            android:id="@+id/edtPhoneNo"
            style="@style/common_edt_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/imvDelPhoneIcon"
            android:layout_toRightOf="@+id/imvPhoneIcon"
            android:background="@android:color/transparent"
            android:gravity="center_vertical|left"
            android:hint="@string/input_phone_hint"
            android:inputType="phone" />

        <ImageView
            android:id="@+id/imvDelPhoneIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/del_icon"
            android:visibility="gone" />
    </RelativeLayout>

    <View android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_0_5"
        android:background="@color/gray_line_area"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimens_48"
        android:background="@color/white"
        android:paddingLeft="@dimen/dimens_12"
        android:paddingRight="@dimen/dimens_12" >

        <ImageView
            android:id="@+id/imvPwdIcon"
            android:layout_width="@dimen/dimens_20"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/pwd_icon" />

        <EditText
            android:id="@+id/edtPwd"
            style="@style/common_edt_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/linLayPwdRightMore"
            android:layout_toRightOf="@+id/imvPwdIcon"
            android:background="@android:color/transparent"
            android:gravity="center_vertical|left"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <LinearLayout
            android:id="@+id/linLayPwdRightMore"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imvDelPwdIcon"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="10dp"
                android:src="@mipmap/del_icon"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imvSeePwdIcon"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                android:src="@mipmap/pwd_show" />
        </LinearLayout>
    </RelativeLayout>

    <View android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_0_5"
        android:background="@color/gray_line_area"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimens_48"
        android:background="@color/white"
        android:paddingLeft="@dimen/dimens_12"
        android:paddingRight="@dimen/dimens_12" >

        <ImageView
            android:id="@+id/imvSmsIcon"
            android:layout_width="@dimen/dimens_20"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/sms_icon" />

        <EditText
            android:id="@+id/edtSms"
            style="@style/common_edt_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/linLayRightMore"
            android:layout_toRightOf="@+id/imvSmsIcon"
            android:background="@android:color/transparent"
            android:gravity="center_vertical|left"
            android:hint="@string/sms_hint"
            android:inputType="phone" />

        <LinearLayout
            android:id="@+id/linLayRightMore"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imvDelSmsIcon"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="10dp"
                android:src="@mipmap/del_icon"
                android:visibility="gone" />

            <View style="@style/common_vertical_margin_line" />

            <TextView
                android:id="@+id/txtGetSmsCode"
                style="@style/btn_request_sms_code"
                android:text="@string/get_sms_code" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btnRegister"
        style="@style/btn_large_orange"
        android:textSize="@dimen/dimens_16"
        android:text="@string/register" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dimens_16"
        android:gravity="center">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:button="@drawable/checkbox_selector"
            android:id="@+id/cb_register_agree_licence"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dimens_4"
            android:textSize="@dimen/dimens_14"
            android:text="同意"
            android:textColor="@color/gray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimens_14"
            android:id="@+id/tv_register_licence"
            android:text="许可协议"
            android:typeface="sans"
            android:textColor="@color/blue_3"/>
    </LinearLayout>

</LinearLayout>