<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_line_area"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimens_48"
        android:layout_marginTop="6dp"
        android:background="@color/white"
        android:paddingLeft="@dimen/dimens_12"
        android:paddingRight="@dimen/dimens_12" >

        <ImageView
            android:id="@+id/imvPhoneIcon_forget"
            android:layout_width="@dimen/dimens_20"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/phone_icon" />

        <EditText
            android:id="@+id/edt_Phone_No_forget"
            style="@style/common_edt_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/imvDelPhoneIcon_forget"
            android:layout_toRightOf="@+id/imvPhoneIcon_forget"
            android:background="@android:color/transparent"
            android:gravity="center_vertical|left"
            android:hint="@string/input_phone_hint"
            android:inputType="phone" />

        <ImageView
            android:id="@+id/imvDelPhoneIcon_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/del_icon"
            android:visibility="gone" />
    </RelativeLayout>

    <View android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_0_5"
        android:background="@color/gray_line_area"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimens_48"
        android:background="@color/white"
        android:paddingLeft="@dimen/dimens_12"
        android:paddingRight="@dimen/dimens_12" >

        <ImageView
            android:id="@+id/imvSmsIcon_forget"
            android:layout_width="@dimen/dimens_20"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/sms_icon" />

        <EditText
            android:id="@+id/edt_Sms_code_forget"
            style="@style/common_edt_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/linLayRightMore_forget"
            android:layout_toRightOf="@+id/imvSmsIcon_forget"
            android:background="@android:color/transparent"
            android:gravity="center_vertical|left"
            android:hint="@string/sms_hint"
            android:inputType="phone" />

        <LinearLayout
            android:id="@+id/linLayRightMore_forget"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imvDelSmsIcon"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="10dp"
                android:src="@mipmap/del_icon"
                android:visibility="gone" />

            <View style="@style/common_vertical_margin_line" />

            <TextView
                android:id="@+id/txtGetSmsCode_forget"
                style="@style/btn_request_sms_code"
                android:text="@string/get_sms_code" />
        </LinearLayout>
    </RelativeLayout>

    <View android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_0_5"
        android:background="@color/gray_line_area"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimens_48"
        android:background="@color/white"
        android:paddingLeft="@dimen/dimens_12"
        android:paddingRight="@dimen/dimens_12" >

        <TextView
            android:id="@+id/imvPhoneIcon"
            android:layout_width="@dimen/dimens_80"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="新密码:"
            android:textSize="@dimen/dimens_14"
            android:textColor="@color/black_1"
            android:src="@mipmap/phone_icon" />

        <EditText
            android:id="@+id/edt_Phone_No_find"
            style="@style/common_edt_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/imvDelPhoneIcon"
            android:layout_toRightOf="@+id/imvPhoneIcon"
            android:background="@android:color/transparent"
            android:gravity="center_vertical|left"
            android:hint="@string/password_hint"
            android:inputType="numberPassword" />

        <LinearLayout
            android:id="@+id/linLayPwdRightMore_find_new"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imvDelPwdIcon_find_new"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="10dp"
                android:src="@mipmap/del_icon"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imvSeePwdIcon_find_new"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                android:src="@mipmap/pwd_hide" />
        </LinearLayout>

    </RelativeLayout>

    <View android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_0_5"
        android:background="@color/gray_line_area"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimens_48"
        android:background="@color/white"
        android:paddingLeft="@dimen/dimens_12"
        android:paddingRight="@dimen/dimens_12" >

        <TextView
            android:id="@+id/imvSmsIcon"
            android:layout_width="@dimen/dimens_80"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="确认新密码:"
            android:textSize="@dimen/dimens_14"
            android:textColor="@color/black_1"
            android:src="@mipmap/sms_icon" />

        <EditText
            android:id="@+id/edt_Sms_code_find"
            style="@style/common_edt_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/linLayRightMore"
            android:layout_toRightOf="@+id/imvSmsIcon"
            android:background="@android:color/transparent"
            android:gravity="center_vertical|left"
            android:hint="@string/input_new_repwd"
            android:inputType="numberPassword" />

        <LinearLayout
            android:id="@+id/linLayPwdRightMore_find_renew"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imvDelPwdIcon_find_renew"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="10dp"
                android:src="@mipmap/del_icon"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imvSeePwdIcon_find_renew"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                android:src="@mipmap/pwd_hide" />
        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_find"
        style="@style/btn_large_orange"
        android:text="确认重置" />

</LinearLayout>

